--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     },
     "license": "BSD-3-Clause",
     "devDependencies": {
+        "browserstack-runner": "^0.5.1",
         "kaba": "^2.0.0-beta.3",
         "qunitjs": "^2.3.2"
+    },
+    "scripts": {
+        "test": "node_modules/.bin/browserstack-runner"
     }
 }
