--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 dist: trusty
 language: node_js
 node_js:
-    - '7'
+    - node
 before_install:
     - npm install -g npm
     - npm install -g kaba-cli
