--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     },
     "license": "BSD-3-Clause",
     "devDependencies": {
-        "browserstack-runner": "^0.5.1",
         "kaba": "^2.0.0-beta.3",
-        "qunitjs": "^2.3.2"
+        "karma": "^1.7.0",
+        "karma-sauce-launcher": "^1.1.0",
+        "karma-qunit": "^1.2.1",
+        "qunitjs": "^2.3.2",
+        "saucelabs": "^1.4.0"
     },
     "scripts": {
-        "test": "node_modules/.bin/browserstack-runner"
+        "test": "node_modules/.bin/karma start"
     }
 }
