--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "test": "node_modules/.bin/karma start"
     },
     "dependencies": {
+        "deep-extend": "^0.5.0",
         "mitt": "^1.1.2",
         "promiscuous": "^0.7.0"
     }
