--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     },
     "license": "BSD-3-Clause",
     "devDependencies": {
-        "kaba": "^2.0.0-beta.3",
+        "kaba": "^2.0.1",
         "karma": "^1.7.0",
         "karma-qunit": "^1.2.1",
         "karma-sauce-launcher": "^1.1.0",
