--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "library",
         "widgets"
     ],
-    "version": "0.0.1-alpha.1",
+    "version": "1.0.0",
     "author": {
         "name": "Jannik Zschiesche",
         "email": "jz@becklyn.com"
