--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 dist: trusty
 language: node_js
+
 node_js:
     - node
+
 before_install:
     - npm install -g kaba-cli
+
 before_script:
     - kaba
+
+addons:
+    sauce_connect: true
