--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "test": "node_modules/.bin/karma start"
     },
     "dependencies": {
+        "mitt": "^1.1.2",
         "promiscuous": "^0.7.0"
     }
 }
