--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "devDependencies": {
         "browserstack-runner": "^0.7.0",
         "kaba": "Becklyn/kaba#0cb217d378a4d8fd6113def4ae6c1653c3111fbb",
-        "karma": "1.7.1",
-        "karma-qunit": "1.2.1",
+        "karma": "2.0.0",
+        "karma-qunit": "2.0.1",
         "karma-sauce-launcher": "1.2.0",
-        "qunitjs": "2.4.1",
+        "qunit": "2.6.0",
         "saucelabs": "1.4.0"
     },
     "scripts": {
