--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     },
     "dependencies": {
         "mitt": "1.1.3",
+        "preact": "^8.2.7",
         "promiscuous": "0.7.1",
         "unfetch": "3.0.0"
     }
