--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "license": "BSD-3-Clause",
     "devDependencies": {
         "browserstack-runner": "0.7.0",
-        "kaba": "Becklyn/kaba#0cb217d378a4d8fd6113def4ae6c1653c3111fbb",
+        "kaba": "5.0.3",
         "karma": "2.0.2",
         "karma-qunit": "2.1.0",
         "karma-sauce-launcher": "1.2.0",
