--- a/package.json
+++ b/package.json
@@ -20,23 +20,19 @@
         "url": "https://github.com/Becklyn/mojave/issues"
     },
     "license": "BSD-3-Clause",
-    "devDependencies": {
-        "browserstack-runner": "0.7.0",
-        "kaba": "5.0.4",
-        "karma": "2.0.5",
-        "karma-qunit": "2.1.0",
-        "karma-sauce-launcher": "1.2.0",
-        "qunit": "2.6.1",
-        "saucelabs": "1.5.0"
-    },
-    "scripts": {
-        "test": "node_modules/.bin/browserstack-runner"
-    },
     "dependencies": {
         "mitt": "1.1.3",
         "preact": "8.2.9",
         "promiscuous": "0.7.1",
         "unfetch": "3.1.1",
         "unistore": "3.0.6"
+    },
+    "devDependencies": {
+        "browserstack-runner": "0.7.0",
+        "kaba": "5.0.4",
+        "qunit": "2.6.1"
+    },
+    "scripts": {
+        "test": "node_modules/.bin/browserstack-runner"
     }
 }
