--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "es2015",
         "module": "es2015",
         "jsx": "preserve",
         "declaration": true,
@@ -12,7 +12,12 @@
         "noUnusedLocals": true,
         "moduleResolution": "node",
         "experimentalDecorators": true,
-        "alwaysStrict": false
+        "alwaysStrict": false,
+        "lib": [
+            "dom",
+            "es5",
+            "es2015"
+        ]
     },
     "include": [
         "**/*.tsx",
