--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
         "mitt": "1.1.3",
         "preact": "8.3.1",
         "promiscuous": "0.7.2",
-        "unfetch": "3.1.2",
-        "unistore": "3.1.0"
+        "unfetch": "3.1.2"
     },
     "devDependencies": {
         "browserstack-runner": "0.9.0",
