--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "qunit": "2.7.1"
     },
     "scripts": {
-        "test": "npm run-script build && node_modules/.bin/browserstack-runner",
+        "test": "node_modules/.bin/browserstack-runner",
         "build": "node_modules/.bin/tsc --diagnostics --noEmitOnError --noErrorTruncation --listEmittedFiles --pretty"
     }
 }
