--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "widgets"
     ],
     "author": {
-        "name": "Jannik Zschiesche",
-        "email": "jz@becklyn.com"
+        "name": "Becklyn Studios",
+        "email": "hello@becklyn.com"
     },
     "repository": {
         "type": "git",
