--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     },
     "scripts": {
         "test": "node_modules/.bin/browserstack-runner",
-        "build": "node_modules/.bin/tsc --version && node_modules/.bin/tsc --diagnostics --noEmitOnError --noErrorTruncation --listEmittedFiles --pretty"
+        "build": "node_modules/.bin/tsc --version && node_modules/.bin/tsc --diagnostics --noEmitOnError --noErrorTruncation --listEmittedFiles --pretty",
+        "dev": "node_modules/.bin/tsc --noEmitOnError --noErrorTruncation --listEmittedFiles --pretty -w"
     }
 }
