--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "license": "BSD-3-Clause",
     "dependencies": {
         "mitt": "1.1.3",
-        "preact": "8.4.2",
+        "preact": "10.0.0-beta.1",
         "promiscuous": "0.7.2",
         "unfetch": "4.1.0"
     },
