--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     },
     "license": "BSD-3-Clause",
     "dependencies": {
-        "mitt": "1.1.3",
-        "preact": "10.0.0-beta.1",
-        "promiscuous": "0.7.2",
-        "unfetch": "4.1.0"
+        "mitt": "^1.1.3",
+        "preact": "^10.0.0-beta.2",
+        "promiscuous": "^0.7.2",
+        "unfetch": "^4.1.0"
     },
     "devDependencies": {
-        "browserstack-runner": "0.9.0",
-        "kaba": "7.2.1",
-        "qunit": "2.9.2",
-        "typescript": "3.4.5"
+        "browserstack-runner": "^0.9.0",
+        "kaba": "^8.0.1",
+        "qunit": "^2.9.2",
+        "typescript": "^3.5.1"
     },
     "scripts": {
         "test": "node_modules/.bin/browserstack-runner",
