Add clean command

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     },
     "version": "4.0.2",
     "scripts": {
-        "build": "node_modules/.bin/tsc --version && node_modules/.bin/tsc -p tests-tsconfig.json --diagnostics --noEmitOnError --noErrorTruncation --listEmittedFiles --pretty",
+        "build": "npm run-script clean && node_modules/.bin/tsc --version && node_modules/.bin/tsc -p tests-tsconfig.json --diagnostics --noEmitOnError --noErrorTruncation --listEmittedFiles --pretty",
+        "clean": "node .build/clean.js",
         "dev": "node_modules/.bin/tsc -p tests-tsconfig.json --noEmitOnError --noErrorTruncation --listEmittedFiles --pretty -w",
         "prepublishOnly": "npm run-script build",
         "test": "node_modules/.bin/browserstack-runner"
