Move config to package.json

--- a/package.json
+++ b/package.json
@@ -35,5 +35,13 @@
         "becklyn",
         "library",
         "widgets"
-    ]
+    ],
+    "renovate-config": {
+        "default": {
+            "extends": [
+                "config:base",
+                ":preserveSemverRanges"
+            ]
+        }
+    }
 }
