Replace promiscuous with promise-polyfill for better support
Apparently promiscuous doesn't support Promise.finally, which the new polyfill does.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dependencies": {
         "mitt": "^1.1.3",
         "preact": "^10.0.0-beta.2",
-        "promiscuous": "^0.7.2",
+        "promise-polyfill": "8.1.3",
         "unfetch": "^4.1.0"
     },
     "devDependencies": {
