--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dependencies": {
         "mitt": "1.1.3",
         "preact": "8.4.2",
-        "promiscuous": "0.7.2",
+        "promise-polyfill": "8.1.3",
         "unfetch": "4.1.0"
     },
     "devDependencies": {
