--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "unfetch": "^4.1.0"
     },
     "devDependencies": {
+        "@types/qunit": "^2.9.0",
         "browserstack-runner": "^0.9.0",
         "kaba": "^8.0.1",
         "qunit": "^2.9.2",
