--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     },
     "dependencies": {
         "mitt": "^1.1.3",
-        "preact": "^10.0.0-rc.0",
+        "preact": "^10.0.0-rc.1",
         "promise-polyfill": "^8.1.3",
         "unfetch": "^4.1.0"
     },
@@ -32,6 +32,7 @@
         "kaba": "^8.1.0",
         "qunit": "^2.9.2",
         "travis-size-report": "^1.1.0",
+        "ts-toolbelt": "^3.2.14",
         "typescript": "^3.5.3"
     },
     "keywords": [
