--- a/package.json
+++ b/package.json
@@ -20,20 +20,20 @@
         "test": "node_modules/.bin/browserstack-runner"
     },
     "dependencies": {
-        "mitt": "^1.1.3",
-        "preact": "^10.0.0-rc.1",
+        "mitt": "^1.2.0",
+        "preact": "^10.3.4",
         "promise-polyfill": "^8.1.3",
         "ts-toolbelt": "^4.0.0",
         "unfetch": "^4.1.0"
     },
     "devDependencies": {
         "@types/qunit": "^2.9.0",
-        "browserstack-runner": "^0.9.0",
-        "glob": "^7.1.4",
+        "browserstack-runner": "^0.9.1",
+        "glob": "^7.1.6",
         "kaba": "^8.1.0",
         "qunit": "^2.9.2",
         "travis-size-report": "^1.1.0",
-        "typescript": "^3.5.3"
+        "typescript": "^3.8.3"
     },
     "keywords": [
         "becklyn",
