--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "mitt": "^1.2.0",
         "preact": "^10.3.4",
         "promise-polyfill": "^8.1.3",
-        "ts-toolbelt": "^4.0.0",
+        "query-string": "^6.12.1",
+        "ts-toolbelt": "^6.8.4",
         "unfetch": "^4.1.0"
     },
     "devDependencies": {
