--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
         "mitt": "^1.2.0",
         "preact": "^10.3.4",
         "promise-polyfill": "^8.1.3",
-        "ts-toolbelt": "^4.0.0",
+        "query-string": "^6.12.1",
+        "ts-toolbelt": "^6.8.9",
         "unfetch": "^4.1.0"
     },
     "devDependencies": {
         "@types/qunit": "^2.9.0",
         "browserstack-runner": "^0.9.1",
         "glob": "^7.1.6",
-        "kaba": "^8.1.0",
+        "kaba": "^9.0.0",
         "qunit": "^2.9.2",
         "travis-size-report": "^1.1.0",
         "typescript": "^3.8.3"
